--- a/config-default.json
+++ b/config-default.json
@@ -1,6 +1,6 @@
 {
 	"instance": "node-OpenDroneMap",
-	"odm_path": "/code",
+	"odm_path": "/home/jsb/storage/OpenDroneMap",
 
 	"logger": {
 		"level": "info",
